fix: quarto rendering

--- a/md-01-quiz.qmd
+++ b/md-01-quiz.qmd
@@ -1,6 +1,9 @@
 ---
 title: "Module 1 Quiz: Quarto Basics for openwashdata"
-format: live-html
+format:
+  live-html:
+    resources:
+      - _extensions/r-wasm/live/resources
 engine: knitr
 ---
 
