--- a/md-01-quiz.qmd
+++ b/md-01-quiz.qmd
@@ -1,9 +1,6 @@
 ---
 title: "Module 1 Quiz: Quarto Basics for openwashdata"
-format:
-  live-html:
-    resources:
-      - _extensions/r-wasm/live/resources
+format: live-html
 engine: knitr
 ---
 
