--- a/md-01-quiz.qmd
+++ b/md-01-quiz.qmd
@@ -1,6 +1,8 @@
 ---
 title: "Module 1 Quiz: Quarto Basics for openwashdata"
-format: live-html
+format: 
+  live-html:
+    theme: cosmo
 engine: knitr
 ---
 
