feat: add github username selection from a list, resolve #10

--- a/modules/_github_username.Rmd
+++ b/modules/_github_username.Rmd
@@ -1,3 +1,112 @@
+```{r github-username-setup, include=FALSE}
+# Read GitHub usernames from CSV
+tryCatch({
+  github_users <- read.csv("github_usernames.csv", stringsAsFactors = FALSE)
+  # Create choices with display format: "First Last (username)"
+  username_choices <- setNames(
+    github_users$GitHub.Username,
+    paste0(github_users$First.Name, " ", github_users$Last.Name, " (", github_users$GitHub.Username, ")")
+  )
+}, error = function(e) {
+  # Fallback if CSV not found
+  username_choices <- character(0)
+})
+```
+
 ```{r github-username, echo=FALSE}
-textInput("github_username", "GitHub Username:", placeholder = "Enter your GitHub username")
+div(
+  selectizeInput(
+    "github_username", 
+    "GitHub Username:", 
+    choices = NULL,  # Start empty for performance
+    options = list(
+      placeholder = "Start typing your name or GitHub username...",
+      maxItems = 1,
+      searchField = c("value", "text"),
+      create = TRUE,  # Allow creating new entries
+      persist = TRUE,  # Keep options persistent
+      closeAfterSelect = TRUE,
+      loadThrottle = 200  # Delay loading to prevent auto-selection
+    )
+  ),
+  # Warning message for new usernames
+  div(id = "username-warning", style = "color: orange; font-size: 12px; margin-top: 5px;"),
+  # Confirmation for new usernames
+  div(id = "username-confirmation", style = "margin-top: 10px;")
+)
+```
+
+```{r, context="server"}
+# Read GitHub usernames in server context
+username_choices <- reactive({
+  tryCatch({
+    github_users <- read.csv("modules/github_usernames.csv", stringsAsFactors = FALSE)
+    # Create choices with display format: "First Last (username)"
+    setNames(
+      github_users$GitHub.Username,
+      paste0(github_users$First.Name, " ", github_users$Last.Name, " (", github_users$GitHub.Username, ")")
+    )
+  }, error = function(e) {
+    # Fallback if CSV not found
+    character(0)
+  })
+})
+
+# Update selectize choices on server side - delay to prevent auto-selection
+observeEvent(session$clientData, {
+  # Small delay to ensure UI is ready before populating choices
+  invalidateLater(500, session)
+  isolate({
+    updateSelectizeInput(
+      session = session,
+      inputId = "github_username",
+      choices = username_choices(),
+      selected = character(0),  # Ensure nothing is pre-selected
+      server = FALSE
+    )
+  })
+}, once = TRUE)
+
+# Validate username and show warning/confirmation
+observeEvent(input$github_username, {
+  if (!is.null(input$github_username) && input$github_username != "") {
+    # Check if username is in the approved list
+    is_approved <- input$github_username %in% username_choices()
+    
+    if (!is_approved) {
+      # Show warning for new username
+      output$`username-warning` <- renderUI({
+        div(
+          style = "color: orange; font-size: 12px; margin-top: 5px;",
+          HTML("⚠️ <strong>Warning:</strong> This username is not in the approved list. Please confirm it's correct.")
+        )
+      })
+      
+      # Show confirmation checkbox
+      output$`username-confirmation` <- renderUI({
+        div(
+          style = "margin-top: 10px;",
+          checkboxInput(
+            "confirm_username", 
+            HTML(paste0("I confirm that <strong>", input$github_username, "</strong> is my correct GitHub username")),
+            value = FALSE
+          )
+        )
+      })
+    } else {
+      # Clear warnings for approved username
+      output$`username-warning` <- renderUI({
+        div(
+          style = "color: green; font-size: 12px; margin-top: 5px;",
+          HTML("✓ Username found in approved list")
+        )
+      })
+      output$`username-confirmation` <- renderUI({})
+    }
+  } else {
+    # Clear all messages when empty
+    output$`username-warning` <- renderUI({})
+    output$`username-confirmation` <- renderUI({})
+  }
+}, ignoreInit = TRUE)
 ```
