fix: bundle github usernames csv in system file to allow server side to read it.

--- a/modules/_github_username.Rmd
+++ b/modules/_github_username.Rmd
@@ -1,7 +1,8 @@
 ```{r github-username-setup, include=FALSE}
 # Read GitHub usernames from CSV
 tryCatch({
-  github_users <- read.csv("github_usernames.csv", stringsAsFactors = FALSE)
+  csv_path <- system.file("extdata", "github_usernames.csv", package = "quiz")
+  github_users <- read.csv(csv_path, stringsAsFactors = FALSE)
   # Create choices with display format: "First Last (username)"
   username_choices <- setNames(
     github_users$GitHub.Username,
@@ -40,7 +41,8 @@ div(
 # Read GitHub usernames in server context
 username_choices <- reactive({
   tryCatch({
-    github_users <- read.csv("modules/github_usernames.csv", stringsAsFactors = FALSE)
+    csv_path <- system.file("extdata", "github_usernames.csv", package = "quiz")
+    github_users <- read.csv(csv_path, stringsAsFactors = FALSE)
     # Create choices with display format: "First Last (username)"
     setNames(
       github_users$GitHub.Username,
