fix: system file logic didn't bundle csv. must add csv to appFile, feat: added little helper function in build to simplify deploy of new quizzes

--- a/modules/_github_username.Rmd
+++ b/modules/_github_username.Rmd
@@ -1,7 +1,7 @@
 ```{r github-username-setup, include=FALSE}
 # Read GitHub usernames from CSV
 tryCatch({
-  csv_path <- system.file("extdata", "github_usernames.csv", package = "quiz")
+  csv_path <- "modules/github_usernames.csv"
   github_users <- read.csv(csv_path, stringsAsFactors = FALSE)
   # Create choices with display format: "First Last (username)"
   username_choices <- setNames(
@@ -41,7 +41,7 @@ div(
 # Read GitHub usernames in server context
 username_choices <- reactive({
   tryCatch({
-    csv_path <- system.file("extdata", "github_usernames.csv", package = "quiz")
+    csv_path <- "modules/github_usernames.csv"
     github_users <- read.csv(csv_path, stringsAsFactors = FALSE)
     # Create choices with display format: "First Last (username)"
     setNames(
